--- a/01_Introduction to Python Programming/Chapter 01 - Variables, Expressions, and Statements.ipynb
+++ b/01_Introduction to Python Programming/Chapter 01 - Variables, Expressions, and Statements.ipynb
@@ -45,12 +45,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a6ebc364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "437.5\n",
+      "4\n",
+      "-46.8\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "x = 12.2\n",
+    "y = 14\n",
+    "x = 100\n",
+    "spam = 32\n",
+    "\n",
+    "a = 35.0\n",
+    "b = 12.50\n",
+    "c = a * b\n",
+    "print(c)\n",
+    "\n",
+    "x = 2\n",
+    "x = x + 2\n",
+    "print(x)\n",
+    "\n",
+    "x = 3.9 * x *( 1- x)\n",
+    "print(x)"
    ]
   },
   {
@@ -70,7 +96,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "xx = 2\n",
+    "\n"
    ]
   },
   {
@@ -105,7 +133,11 @@
    "outputs": [],
    "source": [
     "hrs = input(\"Enter Hours: \")\n",
-    "# START YOUR CODE HERE.\n"
+    "hrs = float(hrs)\n",
+    "rate_per_hour = input('Enter rate per hour : ')\n",
+    "rate_per_hour = float(rate_per_hour)\n",
+    "pay = hrs*rate_per_hour\n",
+    "print(pay)\n"
    ]
   },
   {
@@ -130,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
