--- a/01_Introduction to Python Programming/Chapter 01 - Variables, Expressions, and Statements.ipynb
+++ b/01_Introduction to Python Programming/Chapter 01 - Variables, Expressions, and Statements.ipynb
@@ -45,20 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a6ebc364",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "437.5\n",
-      "4\n",
-      "-46.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# START YOUR CODE HERE.\n",
     "x = 12.2\n",
@@ -98,7 +88,26 @@
    "source": [
     "# START YOUR CODE HERE.\n",
     "xx = 2\n",
-    "\n"
+    "xx = xx * 2 + 2**3/4*5\n",
+    "print(xx)\n",
+    "\n",
+    "ee = 'hello ' + 'there'\n",
+    "print(ee)\n",
+    "print(type(ee))\n",
+    "\n",
+    "print(type(xx))\n",
+    "\n",
+    "print(float(99) + 100)\n",
+    "\n",
+    "i = 42\n",
+    "print(type(i))\n",
+    "\n",
+    "f = float(i)\n",
+    "print(f)\n",
+    "\n",
+    "print(10/2)\n",
+    "print(9/2)\n",
+    "print(10.0/2.0)"
    ]
   },
   {
@@ -132,12 +141,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hrs = input(\"Enter Hours: \")\n",
-    "hrs = float(hrs)\n",
+    "hrs = float(input(\"Enter Hours: \"))\n",
     "rate_per_hour = input('Enter rate per hour : ')\n",
     "rate_per_hour = float(rate_per_hour)\n",
     "pay = hrs*rate_per_hour\n",
-    "print(pay)\n"
+    "print(pay)"
    ]
   },
   {
