--- a/01_Introduction to Python Programming/Chapter 02 - Conditional Execution.ipynb
+++ b/01_Introduction to Python Programming/Chapter 02 - Conditional Execution.ipynb
@@ -45,12 +45,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "38a95db1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smaller\n",
+      "Finish\n",
+      "Before 5\n",
+      "is 5\n",
+      "is still 5\n",
+      "Third 5\n",
+      "Afterwards 5\n",
+      "Before 6\n",
+      "Afterwards 6\n",
+      "Bigger\n",
+      "All done\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "x = 5\n",
+    "if x < 10:\n",
+    "    print('Smaller')\n",
+    "if x > 20:\n",
+    "    print('Bigger')\n",
+    "\n",
+    "print('Finish')\n",
+    "\n",
+    "\n",
+    "x = 5\n",
+    "print('Before 5')\n",
+    "if x == 5:\n",
+    "    print('is 5')\n",
+    "    print('is still 5')\n",
+    "    print('Third 5')\n",
+    "print('Afterwards 5')\n",
+    "print('Before 6')\n",
+    "if x == 6:\n",
+    "    print('Is 6')\n",
+    "    print('is still 6')\n",
+    "    print('Third 6')\n",
+    "\n",
+    "print('Afterwards 6')\n",
+    "\n",
+    "x = 4\n",
+    "\n",
+    "if x > 2:\n",
+    "    print('Bigger')\n",
+    "else:\n",
+    "    print('Smaller')\n",
+    "\n",
+    "print('All done')"
    ]
   },
   {
@@ -68,9 +118,62 @@
    "execution_count": null,
    "id": "1ed373a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Small\n",
+      "All done\n",
+      "Below 20\n",
+      "Hello\n",
+      "Done -11\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "\n",
+    "x = 0\n",
+    "if x < 2 :\n",
+    "    print('Small')\n",
+    "elif x < 10:\n",
+    "    print('Medium')\n",
+    "else:\n",
+    "    print('LARGE')\n",
+    "print('All done')\n",
+    "\n",
+    "x = 6\n",
+    "if x < 2:\n",
+    "    print('Below 2')\n",
+    "elif  x < 20:\n",
+    "    print('Below 20')\n",
+    "elif x < 10:\n",
+    "    print('Below 10')\n",
+    "else:\n",
+    "    print('Something else')\n",
+    "\n",
+    "astr = 'Bob'\n",
+    "try:\n",
+    "    print('Hello')\n",
+    "    istr = int(astr)\n",
+    "    print('There')\n",
+    "except:\n",
+    "    istr = -11\n",
+    "\n",
+    "print('Done',istr)\n",
+    "\n",
+    "rawstr = input('Enter a number')\n",
+    "\n",
+    "try :\n",
+    "    ival = int(rawstr)\n",
+    "except:\n",
+    "    ival = -1\n",
+    "\n",
+    "if ival > 0:\n",
+    "    print('Nice work')\n",
+    "else:\n",
+    "    print('Mot a number')"
    ]
   },
   {
@@ -107,7 +210,20 @@
    },
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "hrs = input(\"Enter Hours:\")\n",
+    "h = float(hrs)\n",
+    "\n",
+    "rate = input('Enter rate:')\n",
+    "rate = float(rate)\n",
+    "\n",
+    "\n",
+    "if h > 40:\n",
+    "    pay = 40*rate +(h-40)*(rate*1.5)\n",
+    "else:\n",
+    "    pay = h*rate\n",
+    "    \n",
+    "print(pay)"
    ]
   },
   {
@@ -154,7 +270,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "score = input(\"Enter Score: \")\n",
+    "\n",
+    "try:\n",
+    "    score = float(score)\n",
+    "    \n",
+    "    if score < 0.0 or score > 1.0:\n",
+    "        exit()\n",
+    "    \n",
+    "    if score >= 0.9:\n",
+    "       print('A')\n",
+    "    elif score >= 0.8:\n",
+    "       print('B')\n",
+    "    elif score >= 0.7:\n",
+    "       print('C')\n",
+    "    elif score >= 0.6:\n",
+    "       print('D')\n",
+    "    else:\n",
+    "       print('F')\n",
+    "except:\n",
+    "    print('The score must be between 0.0 and 1.0')"
    ]
   },
   {
@@ -189,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
