--- a/01_Introduction to Python Programming/Chapter 03 - Functions.ipynb
+++ b/01_Introduction to Python Programming/Chapter 03 - Functions.ipynb
@@ -45,12 +45,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a6ebc364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Fun\n",
+      "Zip\n",
+      "Hello\n",
+      "Fun\n",
+      "t\n",
+      " \n",
+      "0.99\n",
+      "124\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "def thing():\n",
+    "    print('Hello')\n",
+    "    print('Fun')\n",
+    "\n",
+    "\n",
+    "thing()\n",
+    "print('Zip')\n",
+    "thing()\n",
+    "\n",
+    "big = max('Serhat Karaarslan')\n",
+    "print(big)\n",
+    "\n",
+    "tiny = min('Serhat Karaarslan')\n",
+    "print(tiny)\n",
+    "\n",
+    "print(float(99)/100)\n",
+    "\n",
+    "sval = '123'\n",
+    "type(sval)\n",
+    "\n",
+    "ival = int(sval)\n",
+    "print(ival + 1)"
    ]
   },
   {
@@ -65,12 +103,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b47889df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Yo\n",
+      "I'm a lumberjack, and I'm okay.\n",
+      "I sleep all night and I work all day.\n",
+      "7\n",
+      "Hello\n",
+      "Hola\n",
+      "Hello Serhat\n",
+      "Hello Glenn\n",
+      "32\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "x = 5\n",
+    "print('Hello')\n",
+    "\n",
+    "def print_lyrics():\n",
+    "    print(\"I'm a lumberjack, and I'm okay.\")\n",
+    "    print('I sleep all night and I work all day.')#\n",
+    "\n",
+    "\n",
+    "print('Yo')\n",
+    "print_lyrics()\n",
+    "x = x + 2\n",
+    "print(x)\n",
+    "\n",
+    "def greet(lang):\n",
+    "    if lang == 'es':\n",
+    "        print('Hola')\n",
+    "    elif lang == 'fr':\n",
+    "        print('Bonjour')\n",
+    "    else:\n",
+    "        print('Hello')\n",
+    "\n",
+    "greet('en')\n",
+    "greet('es')\n",
+    "\n",
+    "def greet():\n",
+    "    return 'Hello'\n",
+    "\n",
+    "print(greet(),'Serhat')\n",
+    "print(greet(),'Glenn')\n",
+    "\n",
+    "def addtwo(a,b):\n",
+    "    added = a + b\n",
+    "    return added\n",
+    "\n",
+    "print(addtwo(19,13))"
    ]
   },
   {
@@ -85,12 +175,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "9224ad62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "47\n",
+      "['Tom', 'Alan', 'Jonas', 'Zlatan', 'Gregory', 'Augustine']\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "#def double(n):\n",
+    "#    return n *2 \n",
+    "\n",
+    "double = lambda n: n*2\n",
+    "\n",
+    "print(double(10))\n",
+    "\n",
+    "larger = lambda a,b : a if a > b else b\n",
+    "print(larger(10,47))\n",
+    "\n",
+    "names = ['Alan','Gregory','Zlatan','Jonas','Tom','Augustine']\n",
+    "\n",
+    "names.sort(key = lambda x :len(x))\n",
+    "print(names)"
    ]
   },
   {
@@ -123,7 +237,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "def computepay(h, r):\n",
+    "    if h <= 40:\n",
+    "        return h*r\n",
+    "    else: \n",
+    "        return 40*r + (h-40)*r*1.5 \n",
+    "\n",
+    "hrs = input(\"Enter Hours:\")\n",
+    "h = float(hrs)\n",
+    "rate = input('Enter rate per hour')\n",
+    "r = float(rate)\n",
+    "p = computepay(h, r)\n",
+    "print(\"Pay\", p)"
    ]
   },
   {
@@ -153,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
