--- a/01_Introduction to Python Programming/Chapter 04 - Loops and Iterations.ipynb
+++ b/01_Introduction to Python Programming/Chapter 04 - Loops and Iterations.ipynb
@@ -45,12 +45,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a6ebc364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Blastoff!\n",
+      "0\n",
+      "Lather\n",
+      "Rinse\n",
+      "Lather\n",
+      "Rinse\n",
+      "Lather\n",
+      "Rinse\n",
+      "Lather\n",
+      "Rinse\n",
+      "Lather\n",
+      "Rinse\n",
+      "Day Off!\n",
+      "hello\n",
+      "serhat\n",
+      "#\n",
+      "Done!\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "n = 5\n",
+    "while n > 0:\n",
+    "    print(n)\n",
+    "    n = n - 1\n",
+    "print('Blastoff!')\n",
+    "print(n)\n",
+    "\n",
+    "n = 5\n",
+    "while n > 0:\n",
+    "    print('Lather')\n",
+    "    print('Rinse')\n",
+    "    n -=1\n",
+    "print('Day Off!')\n",
+    "\n",
+    "while True:\n",
+    "    line = input('> ')\n",
+    "    if line == 'done':\n",
+    "        break\n",
+    "    print(line)\n",
+    "print('Done!')\n",
+    "\n",
+    "while True:\n",
+    "    line = input('> ')\n",
+    "    if line[0] == '#':\n",
+    "        continue\n",
+    "    if line == 'done':\n",
+    "        break\n",
+    "    print(line)\n",
+    "print('Done!')"
    ]
   },
   {
@@ -68,9 +127,35 @@
    "execution_count": null,
    "id": "b47889df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Blastoff!\n",
+      "Happy New Year Joseph\n",
+      "Happy New Year Glenn\n",
+      "Happy New Year Sally\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "for i in [5,4,3,2,1]:\n",
+    "    print(i)\n",
+    "print('Blastoff!')\n",
+    "\n",
+    "friends = ['Joseph','Glenn','Sally']\n",
+    "for friend in friends:\n",
+    "    print('Happy New Year',friend)\n",
+    "print('Done!')\n",
+    "\n"
    ]
   },
   {
@@ -85,12 +170,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2017351e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before\n",
+      "9\n",
+      "41\n",
+      "12\n",
+      "3\n",
+      "74\n",
+      "15\n",
+      "After\n",
+      "Before -1\n",
+      "9 9\n",
+      "41 41\n",
+      "41 12\n",
+      "41 3\n",
+      "74 74\n",
+      "74 15\n",
+      "After 74\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "print('Before')\n",
+    "for thing in [9,41,12,3,74,15]:\n",
+    "    print(thing)\n",
+    "print('After')\n",
+    "\n",
+    "largest_so_far = -1\n",
+    "print('Before', largest_so_far)\n",
+    "for the_num in [9,41,12,3,74,15]:\n",
+    "    if the_num > largest_so_far:\n",
+    "        largest_so_far = the_num\n",
+    "    print(largest_so_far,the_num)\n",
+    "\n",
+    "print('After',largest_so_far)"
    ]
   },
   {
@@ -108,9 +229,109 @@
    "execution_count": null,
    "id": "2455dfa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before 0\n",
+      "1 9\n",
+      "2 41\n",
+      "3 12\n",
+      "4 3\n",
+      "5 74\n",
+      "6 15\n",
+      "After 6\n",
+      "Before 0\n",
+      "9 9\n",
+      "50 41\n",
+      "62 12\n",
+      "65 3\n",
+      "139 74\n",
+      "154 15\n",
+      "After 154\n",
+      "Before 0 0\n",
+      "1 9 9\n",
+      "2 50 41\n",
+      "3 62 12\n",
+      "4 65 3\n",
+      "5 139 74\n",
+      "6 154 15\n",
+      "After 6 154 25.666666666666668\n",
+      "Before\n",
+      "Large number 41\n",
+      "Large number 74\n",
+      "After\n",
+      "Before False\n",
+      "False 9\n",
+      "False 41\n",
+      "False 12\n",
+      "True 3\n",
+      "False 74\n",
+      "False 15\n",
+      "After False\n",
+      "Before None\n",
+      "9 9\n",
+      "9 41\n",
+      "9 12\n",
+      "3 3\n",
+      "3 74\n",
+      "3 15\n",
+      "After 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE."
+    "# START YOUR CODE HERE.\n",
+    "zork = 0\n",
+    "print('Before',zork)\n",
+    "for thing in [9,41,12,3,74,15]:\n",
+    "    zork = zork + 1\n",
+    "    print(zork,thing)\n",
+    "print('After',zork)\n",
+    "\n",
+    "zork = 0\n",
+    "print('Before',zork)\n",
+    "for thing in [9,41,12,3,74,15]:\n",
+    "    zork = zork + thing\n",
+    "    print(zork,thing)\n",
+    "print('After',zork)\n",
+    "\n",
+    "count = 0\n",
+    "sum = 0\n",
+    "print('Before',count,sum)\n",
+    "for value in [9,41,12,3,74,15]:\n",
+    "    count = count + 1\n",
+    "    sum = sum + value\n",
+    "    print(count, sum,value)\n",
+    "print('After',count,sum, sum/count)\n",
+    "\n",
+    "print('Before')\n",
+    "for value in [9,41,12,3,74,15]:\n",
+    "    if value > 20:\n",
+    "        print('Large number',value)\n",
+    "print('After')\n",
+    "\n",
+    "found = False\n",
+    "print('Before',found)\n",
+    "for value in [9,41,12,3,74,15]:\n",
+    "    if value == 3:\n",
+    "        found = True\n",
+    "    else:\n",
+    "        found = False\n",
+    "    print(found,value)\n",
+    "print('After',found)\n",
+    "\n",
+    "smallest = None\n",
+    "print('Before', smallest)\n",
+    "for value in [9,41,12,3,74,15]:\n",
+    "    if smallest is None:\n",
+    "        smallest = value\n",
+    "    elif value < smallest:\n",
+    "        smallest = value\n",
+    "    print(smallest,value)\n",
+    "\n",
+    "print('After',smallest)\n"
    ]
   },
   {
@@ -144,7 +365,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "largest = None\n",
+    "smallest = None\n",
+    "while True:\n",
+    "    num = input(\"Enter a number: \")\n",
+    "    if num == \"done\":\n",
+    "        break\n",
+    "    try:\n",
+    "        num = int(num)\n",
+    "        if(largest == None):\n",
+    "            largest = num\n",
+    "        elif largest < num:\n",
+    "            largest = num\n",
+    "        if smallest == None:\n",
+    "            smallest = num\n",
+    "        elif smallest > num:\n",
+    "            smallest = num\n",
+    "    except:\n",
+    "        print('Invalid input')\n",
+    "        continue\n",
+    "        \n",
+    "\n",
+    "print(\"Maximum is\", largest)\n",
+    "print('Minimum is',smallest)"
    ]
   },
   {
@@ -184,18 +428,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.9"
   }
  },
  "nbformat": 4,
