--- a/01_Introduction to Python Programming/Chapter 05 - Strings.ipynb
+++ b/01_Introduction to Python Programming/Chapter 05 - Strings.ipynb
@@ -45,12 +45,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a6ebc364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloWorld\n",
+      "a\n",
+      "n\n",
+      "6\n",
+      "0 b\n",
+      "1 a\n",
+      "2 n\n",
+      "3 a\n",
+      "4 n\n",
+      "5 a\n",
+      "0 b\n",
+      "1 a\n",
+      "2 n\n",
+      "3 a\n",
+      "4 n\n",
+      "5 a\n",
+      "b\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "str1 = 'Hello'\n",
+    "str2 = 'World'\n",
+    "bob = str1 + str2\n",
+    "print(bob)\n",
+    "\n",
+    "fruit = 'banana'\n",
+    "letter = fruit[1]\n",
+    "print(letter)\n",
+    "\n",
+    "x = 3\n",
+    "w = fruit[x-1]\n",
+    "print(w)\n",
+    "\n",
+    "print(len(fruit))\n",
+    "\n",
+    "fruit = 'banana'\n",
+    "index = 0\n",
+    "while index < len(fruit):\n",
+    "    letter = fruit[index]\n",
+    "    print(index,letter)\n",
+    "    index += 1\n",
+    "\n",
+    "for index in range(len(fruit)):\n",
+    "    letter = fruit[index]\n",
+    "    print(index,letter)\n",
+    "\n",
+    "for letter in fruit:\n",
+    "    print(letter)\n",
+    "\n",
+    "word = 'banana'\n",
+    "count = 0\n",
+    "for letter in word:\n",
+    "    if letter == 'a':\n",
+    "        count +=1\n",
+    "print(count)"
    ]
   },
   {
@@ -65,12 +130,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b47889df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mont\n",
+      "P\n",
+      "Python\n",
+      "Mo\n",
+      "thon\n",
+      "Monty Python\n",
+      "HalloThere\n",
+      "Hallo There\n",
+      "Found it!\n",
+      "Your word,zzz, comes after banana\n",
+      "hello serhat\n",
+      "hi there\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'removeprefix',\n",
+       " 'removesuffix',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "s = 'Monty Python'\n",
+    "print(s[0:4])\n",
+    "print(s[6:7])\n",
+    "print(s[6:20])\n",
+    "print(s[:2])\n",
+    "print(s[8:])\n",
+    "print(s[:])\n",
+    "\n",
+    "a = 'Hallo'\n",
+    "b= a +'There'\n",
+    "print(b)\n",
+    "c = a+' '+'There'\n",
+    "print(c)\n",
+    "\n",
+    "fruit = 'banana'\n",
+    "'n' in fruit\n",
+    "'m' in fruit\n",
+    "if 'a' in fruit:\n",
+    "    print('Found it!')\n",
+    "\n",
+    "word = input('Enter a word: ')\n",
+    "\n",
+    "if word == 'banana':\n",
+    "    print('All right, bananas.')\n",
+    "\n",
+    "if word < 'banana':\n",
+    "    print('Your word,'+word+', comes before banana.')\n",
+    "elif word > 'banana':\n",
+    "    print('Your word,'+word+', comes after banana')\n",
+    "else:\n",
+    "    print('All right, bananas.')\n",
+    "\n",
+    "greet = 'Hello Serhat'\n",
+    "zap = greet.lower()\n",
+    "print(zap)\n",
+    "print('Hi There'.lower())\n",
+    "\n",
+    "stuff = 'Hello World'\n",
+    "type(stuff)\n",
+    "dir(stuff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4464fd3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "-1\n",
+      "HELLO SERHAT\n",
+      "hello serhat\n",
+      "Hello John\n",
+      "HellX Serhat\n",
+      "Hello Serhat      \n",
+      "            Hello Serhat\n",
+      "Hello Serhat\n",
+      "21\n",
+      "31\n",
+      "uct.ac.za\n"
+     ]
+    }
+   ],
+   "source": [
+    "#find function\n",
+    "fruit = 'banana'\n",
+    "pos = fruit.find('na')\n",
+    "print(pos)\n",
+    "\n",
+    "aa = fruit.find('z')\n",
+    "print(aa)\n",
+    "\n",
+    "#upper & lower\n",
+    "greet = 'Hello Serhat'\n",
+    "nnn = greet.upper()\n",
+    "print(nnn)\n",
+    "\n",
+    "www = greet.lower()\n",
+    "print(www)\n",
+    "\n",
+    "#replace\n",
+    "nstr = greet.replace('Serhat','John')\n",
+    "print(nstr)\n",
+    "\n",
+    "nstr = greet.replace('o','X')\n",
+    "print(nstr)\n",
+    "\n",
+    "#whitespace\n",
+    "greet = '            Hello Serhat      '\n",
+    "print(greet.lstrip())\n",
+    "\n",
+    "print(greet.rstrip())\n",
+    "\n",
+    "print(greet.strip())\n",
+    "\n",
+    "#Prefixes\n",
+    "line = 'Please have a nice day'\n",
+    "line.startswith('Please')\n",
+    "line.startswith('p')\n",
+    "\n",
+    "data = 'From stephen.marquard@uct.ac.za Sat Jan 5 09:14:16 2008'\n",
+    "atpos = data.find('@')\n",
+    "print(atpos)\n",
+    "\n",
+    "sppos = data.find(' ',atpos)\n",
+    "print(sppos)\n",
+    "\n",
+    "host = data[atpos+1 : sppos]\n",
+    "print(host)"
    ]
   },
   {
@@ -99,13 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "71212838",
    "metadata": {},
    "outputs": [],
    "source": [
     "text = \"X-DSPAM-Confidence:    0.8475\"\n",
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "text = \"X-DSPAM-Confidence:    0.8475\"\n",
+    "pos = text.find('0')\n",
+    "number = text[pos:]\n",
+    "number = float(number)\n",
+    "print(number)"
    ]
   },
   {
@@ -129,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
