--- a/01_Introduction to Python Programming/Chapter 06 - Lists.ipynb
+++ b/01_Introduction to Python Programming/Chapter 06 - Lists.ipynb
@@ -45,12 +45,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "38a95db1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 24, 76]\n",
+      "{24, 'red', 74.6}\n",
+      "[1, [5, 6], 7]\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Blastoff!\n",
+      "Happy New Year Joseph\n",
+      "Happy New Year Glenn\n",
+      "Happy New Year Sally\n",
+      "Done!\n",
+      "Glenn\n",
+      "Sally\n",
+      "[2, 14, 27, 41, 63]\n",
+      "[2, 14, 33, 41, 63]\n",
+      "4\n",
+      "range(0, 4)\n",
+      "[0, 1, 2]\n",
+      "Happy New Year Joseph\n",
+      "Happy New Year Glenn\n",
+      "Happy New Year Sally\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "friends = ['Joseph','Glenn','Sally']\n",
+    "carryon = ['socks','shirt','perfume']\n",
+    "\n",
+    "print([1,24,76])\n",
+    "print({'red',24,74.6})\n",
+    "print([1,[5,6],7])\n",
+    "\n",
+    "for i in [5,4,3,2,1]:\n",
+    "    print(i)\n",
+    "print('Blastoff!')\n",
+    "\n",
+    "for friend in friends:\n",
+    "    print('Happy New Year',friend)\n",
+    "print('Done!')\n",
+    "\n",
+    "print(friends[1])\n",
+    "print(friends[2])\n",
+    "\n",
+    "fruit = 'Banana'\n",
+    "#fruit[0] = 'b' # string is immutable\n",
+    "\n",
+    "lotto = [2,14,27,41,63]\n",
+    "print(lotto)\n",
+    "\n",
+    "lotto[2] = 33 # list is muttable(changable)\n",
+    "print(lotto)\n",
+    "\n",
+    "x = [1,2,'joe',99]\n",
+    "print(len(x))\n",
+    "\n",
+    "print(range(4)) # range function returns a list\n",
+    "\n",
+    "print(list(range(len(friends))))\n",
+    "\n",
+    "for i in range(len(friends)):\n",
+    "    friend = friends[i]\n",
+    "    print('Happy New Year',friend)"
    ]
   },
   {
@@ -65,12 +132,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1ed373a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[41, 12]\n",
+      "[9, 41, 12, 3]\n",
+      "[3, 74, 15]\n",
+      "[9, 41, 12, 3, 74, 15]\n",
+      "['book', 99]\n",
+      "['book', 99, 'cookie']\n",
+      "['Glenn', 'Joseph', 'Sally']\n",
+      "Joseph\n",
+      "6\n",
+      "74\n",
+      "3\n",
+      "154\n",
+      "25.666666666666668\n",
+      "Average : 25.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "\n",
+    "#list concatenating\n",
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "c = a + b\n",
+    "print(c)\n",
+    "\n",
+    "#list slicing\n",
+    "t = [9,41,12,3,74,15]\n",
+    "print(t[1:3])\n",
+    "print(t[:4])\n",
+    "print(t[3:])\n",
+    "print(t[:])\n",
+    "\n",
+    "x = list()\n",
+    "type(x)\n",
+    "\n",
+    "#list methods\n",
+    "dir(x)\n",
+    "\n",
+    "stuff = list() # building a new empty list\n",
+    "stuff.append('book')\n",
+    "stuff.append(99)\n",
+    "print(stuff)\n",
+    "\n",
+    "stuff.append('cookie')\n",
+    "print(stuff)\n",
+    "\n",
+    "#in operator in list\n",
+    "some = [1,9,21,10,16]\n",
+    "9 in some\n",
+    "15 in some\n",
+    "20 not in some\n",
+    "\n",
+    "#sort\n",
+    "friends = ['Joseph','Glenn','Sally']\n",
+    "friends.sort()\n",
+    "print(friends)\n",
+    "print(friends[1])\n",
+    "\n",
+    "#build in functions\n",
+    "nums = [3,41,12,9,74,15]\n",
+    "print(len(nums))\n",
+    "\n",
+    "print(max(nums))\n",
+    "\n",
+    "print(min(nums))\n",
+    "\n",
+    "print(sum(nums))\n",
+    "\n",
+    "print(sum(nums)/len(nums))\n",
+    "\n",
+    "numlist = list()\n",
+    "while True:\n",
+    "    inp = input('Enter a number: ')\n",
+    "    if inp == 'done' : break\n",
+    "    value = float(inp)\n",
+    "    numlist.append(value)\n",
+    "\n",
+    "average = sum(numlist ) / len(numlist)\n",
+    "print('Average :',average)"
    ]
   },
   {
@@ -85,12 +235,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "c4a891c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['With', 'three', 'words']\n",
+      "3\n",
+      "With\n",
+      "With\n",
+      "three\n",
+      "words\n",
+      "['A', 'lot', 'of', 'spaces']\n",
+      "['first;second;third']\n",
+      "1\n",
+      "['first', 'second', 'third']\n",
+      "3\n",
+      "stephen.marquard@uct.ac.za\n",
+      "uct.ac.za\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "\n",
+    "#string and list\n",
+    "abc = 'With three words'\n",
+    "stuff = abc.split()\n",
+    "print(stuff)\n",
+    "print(len(stuff))\n",
+    "print(stuff[0])\n",
+    "\n",
+    "for w in stuff:\n",
+    "    print(w)\n",
+    "\n",
+    "line = 'A lot                                of spaces'\n",
+    "etc = line.split() # split looks for spaces\n",
+    "print(etc)\n",
+    "\n",
+    "line = 'first;second;third'\n",
+    "thing = line.split()\n",
+    "print(thing)\n",
+    "print(len(thing))\n",
+    "\n",
+    "thing = line.split(';') # we can give it parameter too\n",
+    "print(thing)\n",
+    "print(len(thing))\n",
+    "\n",
+    "# from a data\n",
+    "#line = 'From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008'\n",
+    "'''fhand = open('mbox-short.txt')\n",
+    "for line in fhand:\n",
+    "    line = line.rstrip() #  end of the line\n",
+    "    if not line.startswith('From '): continue\n",
+    "    words = line.split()\n",
+    "    print(words[2])\n",
+    "'''\n",
+    "\n",
+    "line = 'From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008'\n",
+    "words = line.split()\n",
+    "email = words[1]\n",
+    "print(email)\n",
+    "\n",
+    "pieces = email.split('@')\n",
+    "print(pieces[1])\n"
    ]
   },
   {
@@ -120,14 +331,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1f5fb1ba",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Arise', 'But', 'It', 'Juliet', 'Who', 'already', 'and', 'breaks', 'east', 'envious', 'fair', 'grief', 'is', 'kill', 'light', 'moon', 'pale', 'sick', 'soft', 'sun', 'the', 'through', 'what', 'window', 'with', 'yonder']\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "words = []\n",
+    "fname = input(\"Enter file name: \")\n",
+    "with open(fname) as f:\n",
+    "      file = f.readlines()\n",
+    "for line in file:\n",
+    "    text = line.split()\n",
+    "    for word in text:\n",
+    "        if word not in words:\n",
+    "            words.append(word)\n",
+    "print(sorted(words))"
    ]
   },
   {
@@ -177,7 +406,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "fname = input(\"Enter file name: \")\n",
+    "if len(fname) < 1:\n",
+    "    fname = \"mbox-short.txt\"\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "with open(fname) as f:\n",
+    "    file = f.readlines()\n",
+    "for line in file:\n",
+    "    if line.startswith('From '):\n",
+    "        words = line.split()\n",
+    "        email = words[1]\n",
+    "        print(email)\n",
+    "        count +=1\n",
+    "\n",
+    "\n",
+    "print(\"There were\", count, \"lines in the file with From as the first word\")\n"
    ]
   },
   {
@@ -207,7 +453,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
