--- a/01_Introduction to Python Programming/Chapter 07 - Dictionaries.ipynb
+++ b/01_Introduction to Python Programming/Chapter 07 - Dictionaries.ipynb
@@ -45,12 +45,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a6ebc364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'summer': 12, 'fall': 3, 'spring': 75}\n",
+      "3\n",
+      "{'summer': 12, 'fall': 5, 'spring': 75}\n",
+      "{'age': 21, 'course': 182}\n",
+      "{'age': 23, 'course': 182}\n",
+      "{'chuck': 1, 'fred': 42, 'jan': 100}\n",
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "cabinet = dict()\n",
+    "cabinet['summer'] = 12\n",
+    "cabinet['fall'] = 3\n",
+    "cabinet['spring'] = 75\n",
+    "print(cabinet)\n",
+    "\n",
+    "print(cabinet['fall'])\n",
+    "\n",
+    "cabinet['fall'] = cabinet['fall'] + 2\n",
+    "print(cabinet)\n",
+    "\n",
+    "ddd = dict()\n",
+    "ddd['age'] = 21\n",
+    "ddd['course'] = 182\n",
+    "print(ddd)\n",
+    "ddd['age'] = 23\n",
+    "print(ddd)\n",
+    "\n",
+    "jjj = {'chuck' : 1,'fred':42,'jan':100}\n",
+    "print(jjj)\n",
+    "\n",
+    "ooo= {}\n",
+    "print(ooo)"
    ]
   },
   {
@@ -68,9 +105,50 @@
    "execution_count": null,
    "id": "b47889df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'csev': 1, 'cwen': 1}\n",
+      "{'csev': 1, 'cwen': 2}\n",
+      "{'csev': 2, 'cwen': 2, 'zwian': 1}\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "ccc = dict()\n",
+    "ccc['csev'] = 1\n",
+    "ccc['cwen'] = 1\n",
+    "print(ccc)\n",
+    "ccc['cwen'] = ccc['cwen'] + 1\n",
+    "print(ccc)\n",
+    "\n",
+    "counts = dict()\n",
+    "names = ['csev','cwen','csev','zwian','cwen']\n",
+    "\n",
+    "for name in names:\n",
+    "    if name not in counts:\n",
+    "        counts[name] = 1\n",
+    "    else:\n",
+    "        counts[name] = counts[name] + 1\n",
+    "print(counts)\n",
+    "\n",
+    "#get method\n",
+    "if name in counts:\n",
+    "    x = counts[name]\n",
+    "else:\n",
+    "    x = 0\n",
+    "\n",
+    "x = counts.get(name,0) # get counts[name] if it doesn't exist give 0\n",
+    "print(x)\n",
+    "\n",
+    "\n",
+    "for name in names:\n",
+    "    counts[name] = counts.get(name,0)+1\n",
+    "print(counts)"
    ]
   },
   {
@@ -88,9 +166,94 @@
    "execution_count": null,
    "id": "336c58b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a line of text:\n",
+      "Words: ['the', 'clown', 'ran', 'after', 'tge', 'car', 'and', 'the', 'car', 'ran', 'into', 'the', 'tent', 'and', 'the', 'tent', 'fell', 'down', 'on', 'the', 'clown', 'and', 'the', 'car']\n",
+      "Counting...\n",
+      "Counts {'the': 6, 'clown': 2, 'ran': 2, 'after': 1, 'tge': 1, 'car': 3, 'and': 3, 'into': 1, 'tent': 2, 'fell': 1, 'down': 1, 'on': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "counts = dict()\n",
+    "print('Enter a line of text:')\n",
+    "line = input('')\n",
+    "\n",
+    "words = line.split()\n",
+    "print('Words:',words)\n",
+    "\n",
+    "print('Counting...')\n",
+    "for word in words:\n",
+    "    counts[word] = counts.get(word,0)+1\n",
+    "print('Counts',counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce4decf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'chuck': 1, 'fred': 42, 'jan': 100}\n",
+      "chuck 1\n",
+      "fred 42\n",
+      "jan 100\n",
+      "['chuck', 'fred', 'jan']\n",
+      "['chuck', 'fred', 'jan']\n",
+      "[1, 42, 100]\n",
+      "[('chuck', 1), ('fred', 42), ('jan', 100)]\n",
+      "chuck 1\n",
+      "fred 42\n",
+      "jan 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop and dictionaries\n",
+    "counts = {'chuck' : 1,'fred':42,'jan':100}\n",
+    "print(counts)\n",
+    "\n",
+    "for key in counts:\n",
+    "    print(key,counts[key])\n",
+    "\n",
+    "jjj = {'chuck' : 1,'fred':42,'jan':100}\n",
+    "print(list(jjj))\n",
+    "\n",
+    "print(list(jjj.keys()))\n",
+    "print(list(jjj.values()))\n",
+    "print(list(jjj.items()))\n",
+    "\n",
+    "#two iteration values\n",
+    "jjj = {'chuck' : 1,'fred':42,'jan':100}\n",
+    "for aaa,bbb in jjj.items():\n",
+    "    print(aaa,bbb)\n",
+    "\n",
+    "name = input('Enter file:')\n",
+    "handle = open(name)\n",
+    "\n",
+    "counts = dict()\n",
+    "for line in handle:\n",
+    "    words = line.split()\n",
+    "    for word in words:\n",
+    "        counts[word] = counts.get(word,0) + 1\n",
+    "\n",
+    "bigcount = None\n",
+    "bigword = None\n",
+    "for word,count in counts.items():\n",
+    "    if bigcount is None or count > bigcount:\n",
+    "        bigword = word\n",
+    "        bigcount = count\n",
+    "\n",
+    "print(bigword,bigcount)"
    ]
   },
   {
@@ -119,12 +282,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "71212838",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cwen@iupui.edu 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "fname = input('Enter file:')\n",
+    "if len(fname) < 1: fname ='data/mbox-short.txt'\n",
+    "\n",
+    "counts = dict()\n",
+    "file = open(fname)\n",
+    "for line in file:\n",
+    "    if not line.startswith('From '): continue\n",
+    "    else:\n",
+    "            words = line.split()\n",
+    "            mail = words[1]\n",
+    "            counts[mail] = counts.get(mail,0)+1\n",
+    "\n",
+    "bigcount = None\n",
+    "email = None\n",
+    "for mail,count in counts.items():\n",
+    "      if bigcount is None or count > bigcount:\n",
+    "        email = mail\n",
+    "        bigcount = count\n",
+    "        \n",
+    "print(email, bigcount)"
    ]
   },
   {
@@ -163,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
