--- a/01_Introduction to Python Programming/Chapter 08 - Tuples.ipynb
+++ b/01_Introduction to Python Programming/Chapter 08 - Tuples.ipynb
@@ -48,9 +48,89 @@
    "execution_count": null,
    "id": "a6ebc364",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joseph\n",
+      "(1, 9, 2)\n",
+      "9\n",
+      "1\n",
+      "9\n",
+      "2\n",
+      "[9, 8, 6]\n",
+      "fred\n",
+      "99\n",
+      "dsev 2\n",
+      "cwen 4\n",
+      "dict_items([('dsev', 2), ('cwen', 4)])\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "x = ('Glenn', 'Sally','Joseph')\n",
+    "print(x[2])\n",
+    "y = (1,9,2)\n",
+    "print(y)\n",
+    "print(max(y))\n",
+    "\n",
+    "for iter in y:\n",
+    "    print(iter)\n",
+    "\n",
+    "#Lists are mutable/changeable, we can any element of list\n",
+    "x = [9,8,7]\n",
+    "x[2] = 6\n",
+    "print(x)\n",
+    "\n",
+    "#However tuples are immutable, we can not change the elements of tuples, like strings\n",
+    "y = 'ABC'\n",
+    "#y[2] = \"D\" #'str' object does not support item assignment\n",
+    "\n",
+    "z = (5,4,3)\n",
+    "#z[2] = 0 #TypeError: 'tuple' object does not support item assignment\n",
+    "\n",
+    "#Things not to do with tuples\n",
+    "x = (3,2,1)\n",
+    "\n",
+    "#x.sort() # AttributeError : 'tuple object has no attribute 'sort'ArithmeticError\n",
+    "\n",
+    "#x.append(5) # AttributeError :'tuple' object has no attribute 'append'ArithmeticError\n",
+    "\n",
+    "#x.reverse() # AttributeError :'tuple' object has no attribute 'reverse'\n",
+    "\n",
+    "l = list()\n",
+    "#dir(l)\n",
+    "#['append','count','extend','index','insert','pop','remove','reverse','sort']\n",
+    "\n",
+    "t = tuple()\n",
+    "#dir(t)\n",
+    "#['count','index']\n",
+    "\n",
+    "# We can also put a tuple on the left-hand side of an assignment statement\n",
+    "(x,y) = (4,'fred')\n",
+    "print(y)\n",
+    "\n",
+    "(a,b) = (99,98)\n",
+    "print(a)\n",
+    "\n",
+    "# the items() method in dictionaries returns a list of(key,value) tuples\n",
+    "d = dict()\n",
+    "d['dsev'] = 2\n",
+    "d['cwen'] = 4\n",
+    "\n",
+    "for (k,v) in d.items():\n",
+    "    print(k,v)\n",
+    "\n",
+    "tups = d.items()\n",
+    "print(tups)\n",
+    "\n",
+    "#Tuples are comparable\n",
+    "(0,1,2) > (5,1,2)\n",
+    "(0,1,20000000) < ( 0,3,4)\n",
+    "('Jones','Sally') < ('Jones','Sam')\n",
+    "('Jones','Sally') > ('Adams','Sam')"
    ]
   },
   {
@@ -137,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
