--- a/01_Introduction to Python Programming/Chapter 08 - Tuples.ipynb
+++ b/01_Introduction to Python Programming/Chapter 08 - Tuples.ipynb
@@ -145,12 +145,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b47889df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 10), ('b', 1), ('c', 22)]\n",
+      "a 10\n",
+      "b 1\n",
+      "c 22\n",
+      "[(10, 'a'), (22, 'c'), (1, 'b')]\n",
+      "[(22, 'c'), (10, 'a'), (1, 'b')]\n",
+      "the 3\n",
+      "is 3\n",
+      "and 3\n",
+      "sun 2\n",
+      "yonder 1\n",
+      "with 1\n",
+      "window 1\n",
+      "what 1\n",
+      "through 1\n",
+      "soft 1\n",
+      "[(1, 'b'), (10, 'a'), (22, 'c')]\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "#Sorting List of Tuples\n",
+    "d = {'a':10,'c':22,'b':1}\n",
+    "d.items()\n",
+    "sorted(d.items())\n",
+    "\n",
+    "t = sorted(d.items())\n",
+    "print(t)\n",
+    "for k, v in sorted(d.items()):\n",
+    "    print(k,v)\n",
+    "\n",
+    "tmp = list()\n",
+    "for k,v in d.items():\n",
+    "    tmp.append((v,k))\n",
+    "print(tmp)\n",
+    "\n",
+    "tmp = sorted(tmp,reverse=True)\n",
+    "print(tmp)\n",
+    "\n",
+    "#The top 10 most common words\n",
+    "fhand = open('data/romeo.txt')\n",
+    "counts = dict()\n",
+    "for line in fhand:\n",
+    "    words = line.split()\n",
+    "    for word in words:\n",
+    "        counts[word] = counts.get(word,0) + 1\n",
+    "\n",
+    "lst = list()\n",
+    "for key,val in counts.items():\n",
+    "    newtup = (val,key)\n",
+    "    lst.append(newtup)\n",
+    "\n",
+    "lst = sorted(lst,reverse = True)\n",
+    "\n",
+    "for val, key in lst[:10]:\n",
+    "    print(key,val)\n",
+    "\n",
+    "#shorter version \n",
+    "c = {'a': 10,'b':1,'c':22}\n",
+    "print(sorted([(v,k) for k,v in c.items()]))"
    ]
   },
   {
@@ -182,12 +245,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "71212838",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "04 3\n",
+      "06 1\n",
+      "07 1\n",
+      "09 2\n",
+      "10 3\n",
+      "11 6\n",
+      "14 1\n",
+      "15 2\n",
+      "16 4\n",
+      "17 2\n",
+      "18 1\n",
+      "19 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "name = input(\"Enter file:\")\n",
+    "if len(name) < 1:\n",
+    "    name = \"data/mbox-short.txt\"\n",
+    "handle = open(name)\n",
+    "\n",
+    "counts = dict()\n",
+    "for line in handle:\n",
+    "    if not line.startswith('From '): continue\n",
+    "    \n",
+    "    words = line.split()\n",
+    "    \n",
+    "    date = words[5]\n",
+    "    d = date.split(':')\n",
+    "    hour = d[0]\n",
+    "    counts[hour] = counts.get(hour,0)+1\n",
+    "        \n",
+    "hour_list = list()\n",
+    "\n",
+    "for val,key in counts.items():\n",
+    "    tup = (val,key)\n",
+    "    hour_list.append(tup)\n",
+    "    \n",
+    "hour_list = sorted(hour_list,reverse = False)\n",
+    "\n",
+    "for val,key in hour_list:\n",
+    "    print(val,key)"
    ]
   },
   {
@@ -217,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
