--- a/01_Introduction to Python Programming/Chapter 11 - Object-oriented Programming.ipynb
+++ b/01_Introduction to Python Programming/Chapter 11 - Object-oriented Programming.ipynb
@@ -50,7 +50,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# A program is made up of many cooperating objects.\n",
+    "# Instead of being the 'whole program'-> each object is a little 'island' within the program and cooperatively working with other objects.\n",
+    "# A program is made up of one or more objects working together - objects make use of each other' capabilities\n",
+    "\n",
+    "# An Object is a bit of self-contained Code and Data\n",
+    "# A key aspect of the Object approach is to break the problem into smaller understandable parts(divide and conquer)\n",
+    "# Objects have boundaries that allow us to ignore un-needed detail\n",
+    "# we have been using objects all along : String Objects, Integer Objects, Dictionary Objects, List Objects...\n",
+    "\n",
+    "# class - a template, a schema/sablon- Dog\n",
+    "# method or message -  a defined capability of a class- bark()\n",
+    "# Field or attribute- a bit of data in a class - length\n",
+    "# Object or instance- A particular instance of a class - Lassie"
    ]
   },
   {
@@ -68,9 +80,52 @@
    "execution_count": null,
    "id": "b47889df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So far 1\n",
+      "So far 2\n",
+      "So far 3\n",
+      "Dir  ['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'party']\n",
+      "Type <class '__main__.PartyAnimal'>\n",
+      "Type <class 'int'>\n",
+      "Type <class 'method'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# class is a reserved word that defines a template for making object\n",
+    "\n",
+    "# each partyAnimal object has a bit of code\n",
+    "class PartyAnimal:\n",
+    "\n",
+    "    # When the object is constructed, a specially named method is called to allocate and initialize attributes\n",
+    "    def __init__(self):\n",
+    "        self.x = 0 # data\n",
+    "    \n",
+    "    #method\n",
+    "    def party(self):\n",
+    "        self.x = self.x + 1\n",
+    "        print('So far',self.x)\n",
+    "\n",
+    "# Construct a PartyAnimal object and store in an\n",
+    "an = PartyAnimal()\n",
+    "\n",
+    "#PartyAnimal.party(an)\n",
+    "an.party()\n",
+    "an.party()\n",
+    "an.party()\n",
+    "\n",
+    "# playing with dir and type\n",
+    "#dir() commands lists capabilities\n",
+    "print('Dir ',dir(PartyAnimal))\n",
+    "\n",
+    "#type tells us something about a variable, their types\n",
+    "print(\"Type\",type(an))# PartyAnimal\n",
+    "print(\"Type\",type(an.x)) # int\n",
+    "print('Type',type(an.party)) # method"
    ]
   },
   {
@@ -85,12 +140,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "63048d41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am constructed.\n",
+      "So far 1\n",
+      "So far 2\n",
+      "I am destructed 2\n",
+      "an contains 42\n",
+      "Sally constructed\n",
+      "Sally party count 1\n",
+      "Jim constructed\n",
+      "Jim party count 1\n",
+      "Sally party count 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "#Object Lifecycle\n",
+    "\n",
+    "#Objects are created, used and discarded\n",
+    "#We have special blocks of code(methods) that get called\n",
+    "    # at the moment of creation(constructor)\n",
+    "    # at the moment of detruction(destructor)\n",
+    "# constructors are used a lot\n",
+    "# Destructor are seldom used\n",
+    "\n",
+    "# Constructor \n",
+    "# The primary purpose of the constructor is to set up some instance variables to have the proper initial values when the object is created\n",
+    "\n",
+    "class PartyAnimal:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.x = 0 \n",
+    "        print('I am constructed.')\n",
+    "    \n",
+    "    def party(self):\n",
+    "        self.x = self.x + 1\n",
+    "        print('So far',self.x)\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print('I am destructed', self.x)\n",
+    "\n",
+    "an = PartyAnimal() # created\n",
+    "an.party() #used\n",
+    "an.party() #used\n",
+    "an = 42 #destroyed\n",
+    "print('an contains',an)\n",
+    "\n",
+    "# We can create lost of objects - the class is the template for the object\n",
+    "# we can store each distinct object in its own variable\n",
+    "# we call this having multiple instances of the same class\n",
+    "#Each instance has its own copy of the instance variables\n",
+    "\n",
+    "class PartyAnimal:\n",
+    "\n",
+    "    def __init__(self,z): # Constructos can have additional parameters. These can be used to set up instance variables for the particular instance of the class\n",
+    "        self.x = 0 \n",
+    "        self.name = z\n",
+    "        print(self.name,'constructed')\n",
+    "    \n",
+    "    def party(self):\n",
+    "        self.x = self.x + 1\n",
+    "        print(self.name,'party count',self.x)\n",
+    "\n",
+    "s = PartyAnimal('Sally')\n",
+    "s.party()\n",
+    "\n",
+    "j = PartyAnimal('Jim')\n",
+    "\n",
+    "j.party()\n",
+    "s.party()"
    ]
   },
   {
@@ -105,12 +230,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c9394815",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sally constructed\n",
+      "Sally party count 1\n",
+      "Jim constructed\n",
+      "Jim party count 1\n",
+      "Jim party count 2\n",
+      "Jim points 7\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# Inheritance \n",
+    "# when we make a new class- we can reuse an existing class and inherit all the capabilities of an existing class and then add our own little bit to make our new class\n",
+    "# Another form of store and reuse\n",
+    "#write once - reuse many times\n",
+    "#the new class(child) has all the capabilities of the old class(parent)- and then some more\n",
+    "\n",
+    "\n",
+    "class PartyAnimal:\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        self.x = 0 \n",
+    "        self.name = name\n",
+    "        print(self.name,'constructed')\n",
+    "    \n",
+    "    def party(self):\n",
+    "        self.x = self.x + 1\n",
+    "        print(self.name,'party count',self.x)\n",
+    "\n",
+    "\n",
+    "#This class extends PartyAnimal. It has aöö the capabilities of PartyAnimal and more.\n",
+    "class FootballFan(PartyAnimal):\n",
+    "    def __init__(self,name):\n",
+    "        super().__init__(name)\n",
+    "        self.points = 0\n",
+    "\n",
+    "    def touchdown(self):\n",
+    "        self.points = self.points + 7\n",
+    "        self.party()\n",
+    "        print(self.name,'points',self.points)\n",
+    "\n",
+    "s = PartyAnimal('Sally')\n",
+    "s.party()\n",
+    "\n",
+    "j = FootballFan('Jim')\n",
+    "j.party()\n",
+    "j.touchdown()"
    ]
   },
   {
@@ -139,20 +312,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "71212838",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "class Techie:\n",
+    "    def __init__(self, name:str, age:int, profession:str, location:str):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.profession = profession\n",
+    "        self.location = location\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return print(self.name)\n",
+    "    \n",
+    "    def get_age(self):\n",
+    "        return print(self.age)\n",
+    "    \n",
+    "    def get_profession(self):\n",
+    "        return print(self.profession)\n",
+    "    \n",
+    "    def get_location(self):\n",
+    "        return print(self.location)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6c3a3a98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YourName\n",
+      "99\n",
+      "YourProfession\n",
+      "YourLocation\n"
+     ]
+    }
+   ],
    "source": [
     "# ENTER YOUR ATTRIBUTES HERE.\n",
     "techie = Techie(name = \"YourName\", age = 99, profession = \"YourProfession\", location = \"YourLocation\")\n",
@@ -199,7 +400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
