--- a/02_Data Manipulation/Part A - Regular Expressions/Chapter 01 - Regular Expressions in Python.ipynb
+++ b/02_Data Manipulation/Part A - Regular Expressions/Chapter 01 - Regular Expressions in Python.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b29c306a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# RUN THIS COMMAND ONLY IF YOU USE GOOGLE COLAB.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcolab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m drive\n\u001b[1;32m      3\u001b[0m drive\u001b[38;5;241m.\u001b[39mmount(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/drive\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google'"
+     ]
+    }
+   ],
    "source": [
     "# RUN THIS COMMAND ONLY IF YOU USE GOOGLE COLAB.\n",
     "from google.colab import drive\n",
@@ -58,10 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4ded8029",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/tmp/ipykernel_7142/1389483546.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  text_to_search = '''\n"
+     ]
+    }
+   ],
    "source": [
     "text_to_search = '''\n",
     "abcdefghijklmnopqurtuvwxyz\n",
@@ -114,12 +137,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "12c641d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\tTab\n",
+      "<re.Match object; span=(1, 4), match='abc'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "import re\n",
+    "\n",
+    "#raw string in python is a string literal prefixed with the letter r.\n",
+    "print(r\"\\tTab\")\n",
+    "# without raw string we have to use \\\\t, so we can see the raw string, however with r\"\" we can see the raw string\n",
+    "#raw strings are important to use regular expression, we need them there.\n",
+    "\n",
+    "# compile\n",
+    "pattern = re.compile(r'abc')\n",
+    "\n",
+    "matches = pattern.finditer(text_to_search)\n",
+    "\n",
+    "for match in matches:\n",
+    "    print(match)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -135,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a2b0b2ee",
    "metadata": {},
    "outputs": [],
@@ -219,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
