--- a/02_Data Manipulation/Part B - Numpy/Chapter 01 - List vs. Array in Python.ipynb
+++ b/02_Data Manipulation/Part B - Numpy/Chapter 01 - List vs. Array in Python.ipynb
@@ -438,8 +438,21 @@
     "id": "lJORfgKIUmzI",
     "outputId": "465c21d5-e463-412c-f420-89950b936b69"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 2, 5, 3])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# integer array\n",
     "listA = [1,4,2,5,3]\n",
     "numpyarrayA = np.array(listA)\n",
@@ -458,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "47516bdd",
    "metadata": {
     "colab": {
@@ -479,7 +492,18 @@
     "id": "x-7AhYbC_oCk",
     "outputId": "7e08df35-dce7-42dd-c5c2-ec9bbcffd8da"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.14, 4.  , 2.  , 3.  ])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array([3.14, 4, 2, 3])"
    ]
