arrays are ready

--- a/02_Data Manipulation/Part B - Numpy/Chapter 01 - List vs. Array in Python.ipynb
+++ b/02_Data Manipulation/Part B - Numpy/Chapter 01 - List vs. Array in Python.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b29c306a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# RUN THIS COMMAND ONLY IF YOU USE GOOGLE COLAB.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcolab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m drive\n\u001b[1;32m      3\u001b[0m drive\u001b[38;5;241m.\u001b[39mmount(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/drive\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google'"
+     ]
+    }
+   ],
    "source": [
     "# RUN THIS COMMAND ONLY IF YOU USE GOOGLE COLAB.\n",
     "from google.colab import drive\n",
@@ -103,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bceb28ee",
    "metadata": {
     "id": "6ZgU2qx7NbrG"
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "95fd858e",
    "metadata": {
     "colab": {
@@ -191,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "08880c25",
    "metadata": {
     "colab": {
@@ -282,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "482cbd48",
    "metadata": {
     "colab": {
@@ -331,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b8b37e18",
    "metadata": {
     "colab": {
@@ -445,7 +457,7 @@
        "array([1, 4, 2, 5, 3])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "47516bdd",
    "metadata": {
     "colab": {
@@ -499,7 +511,7 @@
        "array([3.14, 4.  , 2.  , 3.  ])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "41176b04",
    "metadata": {
     "colab": {
@@ -541,11 +553,24 @@
     "id": "hmiR6lk6XXj3",
     "outputId": "22032b70-ae3c-4abb-ba1a-1a208828188c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [3, 4, 5],\n",
+       "       [3, 3, 2]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.array([[1, 2, 3], \n",
-    "          [3, 4],\n",
-    "          [3, 3]])"
+    "np.array([[1,2,3],\n",
+    "          [3,4,5],\n",
+    "          [3,3,2]])"
    ]
   },
   {
@@ -570,14 +595,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "719c5fba",
    "metadata": {
     "id": "zlCgDA_C_g1a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5]\n",
+      "[1, 3, 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "\n",
+    "list1 = list(range(1,6,2))\n",
+    "print(list1)\n",
+    "\n",
+    "list2 = [x for x in range(6) if x %2 != 0]\n",
+    "print(list2)"
    ]
   },
   {
@@ -601,14 +641,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6d10d33a",
    "metadata": {
     "id": "He_YAzYQXRy0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "L = list(range(10))\n",
+    "L"
    ]
   },
   {
@@ -632,14 +685,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8d289dbb",
    "metadata": {
     "id": "f9KxYYflUnYw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "print(L[0])"
    ]
   },
   {
@@ -663,14 +725,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d02f4e32",
    "metadata": {
     "id": "lJORfgKIUmzI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 4, 3, 2, 1])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "list3 = list([5,4,3,2,1])\n",
+    "A = np.array(list3)\n",
+    "A"
    ]
   },
   {
@@ -694,14 +770,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "fee1434e",
    "metadata": {
     "id": "x-7AhYbC_oCk"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.int64'>\n",
+      "<class 'numpy.int64'>\n",
+      "<class 'numpy.int64'>\n",
+      "<class 'numpy.int64'>\n",
+      "<class 'numpy.int64'>\n",
+      "int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "for num in A:\n",
+    "    print(type(num))\n",
+    "\n",
+    "print(A.dtype)"
    ]
   },
   {
@@ -725,16 +818,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cb5b95a9",
    "metadata": {
     "id": "GLLBKq6uXR0G"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A2 = np.array([3.14, 4, 2, 3])\n",
     "# START YOUR CODE HERE.\n",
-    "A2.dtype == ''"
+    "A2.dtype == 'float'"
    ]
   },
   {
@@ -758,14 +862,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "8dc1e040",
    "metadata": {
     "id": "hmiR6lk6XXj3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9, 8, 7],\n",
+       "       [3, 2, 1],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# START YOUR CODE HERE.\n"
+    "# START YOUR CODE HERE.\n",
+    "list4 = [[9,8,7],[3,2,1],[4,5,6]]\n",
+    "B = np.array(list4)\n",
+    "B"
    ]
   },
   {
@@ -787,7 +907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -801,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
